--- a/notebooks/Create_DBs.ipynb
+++ b/notebooks/Create_DBs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,18 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from pyphoon.db import pd_manager"
+    "from pyphoon.db import pd_manager\n",
+    "from pyphoon.clean.correction import correct_corrupted_pixels_1\n",
+    "from pyphoon.clean.detection import detect_corrupted_pixels_1\n",
+    "from pyphoon.clean.fillgaps import generate_new_frames_1\n",
+    "from pyphoon.clean.fix import TyphoonListImageFixAlgorithm\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -160,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -204,18 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Corrupted database file not found, creating new...\n",
-      "Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not exists(corrupted):\n",
     "    print('Corrupted database file not found, creating new...')\n",
@@ -228,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -237,10 +232,11 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "MultiIndex: 4788 entries, (197901, 1979-01-03 16:00:00) to (201717, 2017-09-04 15:00:00)\n",
-      "Data columns (total 1 columns):\n",
-      "corrupted    4788 non-null object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 404.2 KB\n"
+      "Data columns (total 2 columns):\n",
+      "corrupted     4788 non-null object\n",
+      "corruption    4788 non-null float64\n",
+      "dtypes: float64(1), object(1)\n",
+      "memory usage: 441.6 KB\n"
      ]
     }
    ],
@@ -250,21 +246,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fix TyphoonList parameters\n",
+    "fix_algorithm = TyphoonListImageFixAlgorithm(\n",
+    "    detect_fct=detect_corrupted_pixels_1,\n",
+    "    correct_fct=correct_corrupted_pixels_1,\n",
+    "    fillgaps_fct=generate_new_frames_1,\n",
+    "    detect_params={'min_th': 160, 'max_th': 310},\n",
+    "    n_frames_th=2\n",
+    ")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pd_man.add_corrected_info(corrected_dir=corrected_dir, orig_images_dir=orig_images_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>corrupted</th>\n",
+       "      <th>corruption</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>seq_no</th>\n",
+       "      <th>obs_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">197901</th>\n",
+       "      <th>1979-01-03 16:00:00</th>\n",
+       "      <td>197901_1979010316</td>\n",
+       "      <td>0.004311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1979-01-06 21:00:00</th>\n",
+       "      <td>197901_1979010621</td>\n",
+       "      <td>0.002281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1979-01-07 06:00:00</th>\n",
+       "      <td>197901_1979010706</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">197902</th>\n",
+       "      <th>1979-03-22 03:00:00</th>\n",
+       "      <td>197902_1979032203</td>\n",
+       "      <td>0.000328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1979-03-22 06:00:00</th>\n",
+       "      <td>197902_1979032206</td>\n",
+       "      <td>0.000103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    corrupted  corruption\n",
+       "seq_no obs_time                                          \n",
+       "197901 1979-01-03 16:00:00  197901_1979010316    0.004311\n",
+       "       1979-01-06 21:00:00  197901_1979010621    0.002281\n",
+       "       1979-01-07 06:00:00  197901_1979010706    0.000004\n",
+       "197902 1979-03-22 03:00:00  197902_1979032203    0.000328\n",
+       "       1979-03-22 06:00:00  197902_1979032206    0.000103"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_man.corrupted.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pd_man.save_corrupted(corrupted)"
+   ]
   }
  ],
  "metadata": {
