--- a/notebooks/Create_DBs.ipynb
+++ b/notebooks/Create_DBs.ipynb
@@ -208,13 +208,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Fix TyphoonList parameters\n",
+    "fix_algorithm = TyphoonListImageFixAlgorithm(\n",
+    "    detect_fct=detect_corrupted_pixels_1,\n",
+    "    correct_fct=correct_corrupted_pixels_1,\n",
+    "    fillgaps_fct=generate_new_frames_1,\n",
+    "    detect_params={'min_th': 160, 'max_th': 310},\n",
+    "    n_frames_th=2\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if not exists(corrupted):\n",
     "    print('Corrupted database file not found, creating new...')\n",
-    "    pd_man.add_corrupted(images_dir=orig_images_dir, save_corrected_to=corrected_dir)\n",
+    "    pd_man.add_corrupted(fix_algorithm=fix_algorithm, images_dir=orig_images_dir, save_corrected_to=corrected_dir)\n",
     "    pd_man.save_corrupted(corrupted)\n",
     "    print('Done.')\n",
     "else:\n",
@@ -223,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -246,28 +266,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Fix TyphoonList parameters\n",
-    "fix_algorithm = TyphoonListImageFixAlgorithm(\n",
-    "    detect_fct=detect_corrupted_pixels_1,\n",
-    "    correct_fct=correct_corrupted_pixels_1,\n",
-    "    fillgaps_fct=generate_new_frames_1,\n",
-    "    detect_params={'min_th': 160, 'max_th': 310},\n",
-    "    n_frames_th=2\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "pd_man.add_corrected_info(corrected_dir=corrected_dir, orig_images_dir=orig_images_dir)"
