changing writing hdf5 files method

--- a/notebooks/chunks_generator.ipynb
+++ b/notebooks/chunks_generator.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,8 @@
     "from pyphoon.db.data_extractor import DataExtractor\n",
     "from pyphoon.io.h5 import read_source_image\n",
     "from os.path import exists, join\n",
-    "import h5py"
+    "import h5py\n",
+    "import shutil"
    ]
   },
   {
@@ -46,21 +47,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/fs9/grishin/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:8: PerformanceWarning: \n",
-      "your performance may suffer as PyTables will pickle object types that it cannot\n",
-      "map directly to c-types [inferred_type->mixed,key->values] [items->None]\n",
-      "\n",
-      "  \n",
-      "/fs9/grishin/anaconda3/lib/python3.6/site-packages/tables/path.py:118: NaturalNameWarning: object name is a Python keyword: 'class'; you will not be able to use natural naming to access this object; using ``getattr()`` will still work, though\n",
-      "  % (name, _warnInfo), NaturalNameWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "man.add_original_images(orig_images_dir)\n",
     "man.add_besttrack(besttrack_dir)\n",
@@ -74,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,42 +75,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "h5py._hl.dataset.Dataset"
+       "[200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718,\n",
+       " 200718]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(f.get('seq_no')['values'])"
+    "list(f.get('seq_no'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([128,   4, 149, ..., 148,  98,  46], dtype=uint8)]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(f.get('data')['values'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if exists(output_dir):\n",
+    "    shutil.rmtree(output_dir, ignore_errors=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py.__version__"
    ]
   }
  ],
