notebook and readme

--- a/tasks/tcxtc/notebooks/Final_Model.ipynb
+++ b/tasks/tcxtc/notebooks/Final_Model.ipynb
@@ -50,10 +50,16 @@
     "\n",
     "import h5py\n",
     "import numpy as np\n",
-    "\n",
+    "import cv2\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
     "from pyphoon.app.utils import load_h5datachunks, parse_to_tcxtc_task\n",
     "from pyphoon.app.preprocess import MeanImagePreprocessor\n",
+    "from pyphoon.app.callbacks import StoreModelWeights, OurTensorBoard, LossHistory\n",
+    "from pyphoon.app.utils import data_generator_from_chunklist\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
+    "from tensorboard.backend.event_processing.event_accumulator import EventAccumulator\n",
     "# Import keras libraries\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, Activation\n",
@@ -315,15 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define preprocessor\n",
-    "from pyphoon.app.preprocess import MeanImagePreprocessor\n",
-    "import cv2\n",
     "with h5py.File('../preprocessing_year.h5') as f:\n",
-    "    mean = cv2.resize(f.get('image_mean').value, (256, 256))\n",
+    "    mean = f.get('image_mean').value, (256, 256)\n",
     "    scale_factor = f.get('max_value').value - f.get('min_value').value\n",
     "\n",
     "preprocessor = MeanImagePreprocessor(mean, scale_factor, add_axis=[3], resize_factor=(256, 256))"
@@ -331,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,8 +449,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyphoon.app.callbacks import StoreModelWeights, OurTensorBoard, LossHistory\n",
-    "\n",
     "foldername = 'results'\n",
     "storeweights_callback = StoreModelWeights(foldername, naming=\"val_acc\")\n",
     "tensorboard_callback = OurTensorBoard(foldername)\n",
@@ -505,8 +507,6 @@
     }
    ],
    "source": [
-    "from pyphoon.app.utils import data_generator_from_chunklist\n",
-    "\n",
     "# Number train samples\n",
     "n_train = sum([len(x) for x in Y_train])\n",
     "n_valid = sum([len(x) for x in Y_valid])\n",
@@ -715,9 +715,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "\n",
     "p = precision_score(y_true, y_pred)\n",
     "r = recall_score(y_true, y_pred)\n",
     "\n",
@@ -784,7 +781,6 @@
     }
    ],
    "source": [
-    "from tensorboard.backend.event_processing.event_accumulator import EventAccumulator\n",
     "path_log_file = 'results_2/tensorboard_log/events.out.tfevents.1523545504.97c10ae7d2cf'\n",
     "event_acc = EventAccumulator(path_log_file)\n",
     "event_acc.Reload()\n",
@@ -826,8 +822,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Loss\n",
     "plt.plot(subepochs, train_loss, 'k')\n",
     "plt.plot(subepochs, val_loss, 'k--')\n",
