--- a/tasks/tcxtc/notebooks/Final_Model.ipynb
+++ b/tasks/tcxtc/notebooks/Final_Model.ipynb
@@ -199,19 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test...\n",
-      "valid...\n",
-      "train...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test\n",
     "print(\"test...\")\n",
@@ -349,7 +339,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Model architecture\n",
+    "## 3. Model\n",
+    "In this section we will define our models architecture and will train it from scratch. Alternatively, you may refer to section 3.3 to load pretrained weights.\n",
+    "\n",
+    "### 3.1. Model architecture\n",
     "Now, time to define our model. We directly implement the final architecture, with the hyper-parameters that provided best result during the grid search."
    ]
   },
@@ -427,11 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Train\n",
-    "\n",
-    "In this section we train the model from scratch. Alternatively, you may refer to section 5 to load pretrained weights.\n",
-    "\n",
-    "## 4.1 Callbacks\n",
+    "### 3.2 Callbacks\n",
     "Before training, we will define some usefull callbacks to supervise the training process. One of the most usefull callbacks is [Tensorboard](https://www.tensorflow.org/programmers_guide/summaries_and_tensorboard), which enables easy visualisation of loss and accuracy curves.\n",
     "\n",
     "Make sure to use the following command to run the tensorboard client.\n",
@@ -461,6 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 4.2 Train\n",
     "Finally, To feed our model with input data we will use a data generator, provided by method `data_generator` from `pyphoon.app.utils`."
    ]
   },
@@ -530,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Load pre-trained weights\n",
+    "### 4.3 Load pre-trained weights\n",
     "Here we load the weights that provided the best performance and evaluate the performance on the test data. l."
    ]
   },
